syntax = "proto3";
option go_package = "task/";

package task;

service TaskService {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc GetList(GetListRequest) returns (GetListResponse) {}
}

message Task {
    int64 id = 1;
    int64 user_id = 2;
    int64 status = 3;
    string title = 4;
    string content = 5;
    string created_at = 6;
    string updated_at = 7;
}

message Base {
    int64 code = 1;
    string message = 2;
}

message CreateRequest {
    int64 user_id = 1;
    string title = 2;
    string content = 3;
}

message CreateResponse {
    Base base = 1;
    Task data = 2;
}

message UpdateRequest {
    int64 id = 1;
    int64 status = 2;
    string title = 3;
    string content = 4;
}

message UpdateResponse {
    Base base = 1;
    Task data = 2;
}

message DeleteRequest {
    int64 id = 1;
}

message DeleteResponse {
    Base base = 1;
}

message GetListRequest {
    int64 user_id = 1;
    int64 status = 2;
}

message GetListResponse {
    Base base = 1;
    repeated Task data = 2;
}